--- a/Admin/Web.config
+++ b/Admin/Web.config
@@ -16,7 +16,8 @@
   </system.codedom>
   <connectionStrings>
 	  <add name="conexion" connectionString="Data Source=HOST-GIO\SQLEXPRESS;user id=sa;password=1234;initial catalog=Portal_CAS;Trusted_Connection=False;"/>
-	  <add name="conexionDS" connectionString="server=10.0.1.156;user id=sa;password=gcc11#pws1;initial catalog=FacturacionWeb;"/>
+	  <!--<add name="conexionDS" connectionString="server=10.0.1.156;user id=sa;password=gcc11#pws1;initial catalog=FacturacionWeb;"/>-->
+    <add name="conexionDS" connectionString="Data Source=HOST-GIO\SQLEXPRESS;user id=sa;password=1234;initial catalog=FacturacionWeb;Trusted_Connection=False;"/>
     <add name="conexion_" connectionString="Data Source=HOST-GIO\SQLEXPRESS;user id=sa;password=1234;initial catalog=PortalWeb;Trusted_Connection=False;"/>
   </connectionStrings>
 </configuration>
