--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\LookupsKey.cs" />
     <Compile Include="DS\ConexionDS.cs" />
+    <Compile Include="Lookup\LookupModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
